# bitTorrent

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  setup.sh
include/client/: bitClient.hpp  defs.hpp  networkEngine.hpp  torrentSession.hpp
include/common/: bencoding.hpp  network.hpp  peers.hpp  queue.hpp  sha1.hpp  shared.hpp  transIdGen.hpp  utils.hpp
src/: main.cpp
src/client/: CMakeLists.txt  bitClient.cpp  main.cpp  networkEngine.cpp  torrentSession.cpp
src/common/: CMakeLists.txt  bencoding.cpp  network.cpp  sha1.cpp  shared.cpp  transIdGen.cpp  udpConnector.cpp  udpSocket.cpp  utils.cpp
src/core/: CMakeLists.txt
src/server/: CMakeLists.txt  main.cpp
